# ridepooling

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
src/ridepooling/: __main__.py  demand_calculation.py  pooling.py  request.py  simulation.py  vehicle.py
src/ridepooling/example/config/: config.cfg
src/ridepooling/example/input/: demand.csv  distance.csv  requests.csv  station_probability.csv  vehicles.json  waytime.csv
